[package]
name = "uplc-wrapper"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
error = "0.1.9"
uplc = { git = "https://github.com/aiken-lang/aiken.git"}
wasm-bindgen = "0.2.89"
k256 = { version = "0.13.0" }
js-sys = "0.3.61"
getrandom = { version = "0.2", features = ["js"] }
wee_alloc = "0.4.5"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']
